Fixes MIXES heading from jumping around

--- a/sass/site.scss
+++ b/sass/site.scss
@@ -497,13 +497,13 @@ section#waves
     top: 0;
     width: 100%;
     margin: 0;
-    min-height: 112px;
 
     .mixes-title-wrapper{
       
       position: absolute;
       width: 100%;    
-      height: 100%;
+      height: 111px;
+      // ^ to stop the mixes header from jumping around on video load
       z-index: 100;
       
       .mixes-title{
